# simple-mapreduce

./: .ghci  .gitignore  README.md  mapreduce-simple.cabal  mapreduce.cabal
src/Data/: MapReduce.hs
