Name:                mapreduce-simple
Version:             0.2.1
License:             BSD3
License-file:        LICENSE
Author:              Ozgun Ataman
Maintainer:          ozataman@gmail.com
Category:            Data
Build-type:          Simple

-- Extra-source-files:  

Cabal-version:       >=1.2


Library
  hs-source-dirs: src, test
  Exposed-modules: 
    Data.MapReduce
  
  Build-depends:
      base > 4
    , bytestring
    , containers
    , deepseq
    , enumerator >= 0.4.5
    , mtl > 2
    , csv-enumerator
    , redis
    , redis-simple
    , binary
    , snappy

  extensions:
      NoMonomorphismRestriction
    , OverloadedStrings
    , FlexibleContexts
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
